@@ -741,7 +741,13 @@ LocoBuffer) or TCP/IP network links (e.g. LbServer,
 http://loconetovertcp.sourceforge.net/).
 .\"
 .TP
-loconetID
+sync-time-from-loconet
+default is no
+.TP
+decode time messages from the loconet and set the SRCP TIME device.
+
+.TP
+loconet-id
 Default is 0x50.
 .TP
 ms100
